--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Car in BG / wiki / guide</h1>
+<h1>Car in Bulgaria / Wiki / Guide</h1>
 
 <h2>Где покупать, плюсы и минусы</h2>
 
@@ -127,6 +127,7 @@ https://radial.bg/content/news/gtp/</li>
 </ul>
 
 <p>Примерный размер штрафов:
+
 | Нарушение | Размер штрафа |
 |:&#8211;|:&#8211;|
 | Не пристегнутый ремень | 50 лева (25 евро + 10 точек) |
@@ -136,8 +137,7 @@ https://radial.bg/content/news/gtp/</li>
 | Превышение от 31 до 40 км/ч | 400 лева (200 евро) + 6 точек |
 | Превышение больше 40 км/ч | 600 лева и 12 точки |
 | Превышение больше 50 км | 700 лева и за каждые следующие 5 км + 50 лева |
-| Алкогольное опьянение | от 0.5 до 0.8 промилле – 500 лева (250 евро) + 10 точек + 6 месяцев без прав
-|
+| Алкогольное опьянение | от 0.5 до 0.8 промилле – 500 лева (250 евро) + 10 точек + 6 месяцев без прав |
 | Не читаемый номер | 50 лева (25 евро) |
 | Парковка на инвалидом месте без талона | 200 лева (100 евро) |
 | Парковка на тратуаре | от 50 до 200 лева (25&#8211;100 евро) |
